<resources>
    <string name="app_name">SmartBlinds</string>
    <string name="new_user">New User</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="scan">Scan</string>
    <string name="next">Next</string>
    <string name="time">Time</string>
    <string name="manual">Manual</string>
    <string name="temperature">Temperature</string>
    <string name="light">Light</string>
    <string name="position">Position</string>
    <string name="_100">100%</string>
    <string name="_00f">00F</string>
    <string name="close_at">Close at:</string>
    <string name="open_at">Open at:</string>
    <string name="f">F</string>
    <string name="temperature_configuration">Temperature Configuration</string>
    <string name="save">Save</string>
    <string name="connect">Connect</string>
    <string name="smartblinds">SmartBlinds#</string>
    <string name="device_password">Device Password</string>
    <string name="select_smart_blind">Select Smart Blind:</string>
    <string name="check_connection">Check Connection</string>
    <string name="select_wifi">Select WiFi</string>
    <string name="ok">OK</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="battery">Battery</string>
    <string name="light_configuration">Light Configuration</string>
    <string name="if_bright">If bright,</string>
    <string name="if_dark">If dark,</string>
    <string name="time_configuration">Time Configuration</string>
    <string name="time_col">:</string>
    <string name="_00">00</string>
    <string name="manual_control">Manual Control</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="turn_right">Turn Right</string>
    <string name="turn_left">Turn Left</string>
    <string name="pitch_down">pitch down</string>
    <string name="pitch_up">Pitch up</string>
    <string name="_00_degree">00°</string>
    <string name="slats_angle">Slats Angle</string>
    <string-array name="OPEN_CLOSE">
        <item>OPEN</item>
        <item>CLOSE</item>
    </string-array>
    <string-array name="AM_PM">
        <item>AM</item>
        <item>PM</item>
    </string-array>
</resources>
