<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/blinds_list"
        android:layout_width="410dp"
        android:layout_height="483dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="28dp"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/scan_scan_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/scan_scan_btn"
        android:layout_width="233dp"
        android:layout_height="61dp"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="93dp"
        android:text="@string/scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/scan_next_btn"
        android:layout_width="233dp"
        android:layout_height="61dp"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scan_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="27dp"
        android:text="@string/select_smart_blind"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/blinds_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scan_title_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="27dp"
        android:text="@string/select_wifi"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/blinds_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>