<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/tempconfig_close_temp"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="75sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="95dp"
        android:layout_height="97dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="38dp"
        android:text="@string/close_at"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="99dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="72dp"
        android:text="@string/f"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tempconfig_close_temp"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="95dp"
        android:layout_height="97dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="29dp"
        android:text="@string/open_at"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="99dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="72dp"
        android:text="@string/f"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/temp_config_open_temp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/temp_config_open_temp"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="75sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tempconfig_close_temp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="411dp"
        android:layout_height="94dp"
        android:layout_marginTop="43dp"
        android:text="@string/temperature_configuration"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/temp_config_save_btn"
        android:layout_width="233dp"
        android:layout_height="61dp"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="223dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>