<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/time_config_save"
        android:layout_width="233dp"
        android:layout_height="61dp"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="100dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/time_open_spiner"
        android:layout_width="147dp"
        android:layout_height="58dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_open_min"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Spinner
        android:id="@+id/time_close_spinner"
        android:layout_width="148dp"
        android:layout_height="52dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_open_min"
        app:layout_constraintTop_toBottomOf="@+id/time_open_spiner" />

    <EditText
        android:id="@+id/time_open_min"
        android:layout_width="72dp"
        android:layout_height="91dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="176dp"
        android:ems="10"
        android:hint="@string/_00"
        android:inputType="time"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/time_close_min"
        android:layout_width="72dp"
        android:layout_height="91dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="176dp"
        android:ems="10"
        android:hint="@string/_00"
        android:inputType="time"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_open_min" />

    <TextView
        android:id="@+id/time_open_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="12dp"
        android:text="@string/time_col"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/time_open_min"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/time_open_hr"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/time_open_txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="12dp"
        android:text="@string/time_col"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/time_open_min"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/time_open_hr"
        app:layout_constraintTop_toBottomOf="@+id/time_close_txt" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="411dp"
        android:layout_height="94dp"
        android:layout_marginTop="43dp"
        android:text="@string/time_configuration"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_open_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/open_at"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/time_close_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="77dp"
        android:text="@string/close_at"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_open_hr" />

    <EditText
        android:id="@+id/time_open_hr"
        android:layout_width="69dp"
        android:layout_height="88dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/_00"
        android:inputType="time"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_open_txt" />

    <EditText
        android:id="@+id/time_close_hr"
        android:layout_width="69dp"
        android:layout_height="88dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/_00"
        android:inputType="time"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_close_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>